# ComfyUI-Step_Audio_EditX_TTS

./: README.md  __init__.py  pyproject.toml  requirements.txt
core/: __init__.py  audio_editor.py  audio_stitcher.py  longform_chunker.py  model_manager.py  utils.py  voice_cloner.py
example_workflow/: Step_Audio_Editx_TTS-advanced-AIO-example.json  Step_Audio_Editx_TTS-clone-example.json  Step_Audio_Editx_TTS-edit-example.json
nodes/: __init__.py  step_audio_clone_node.py  step_audio_edit_node.py
resources/: accents.txt  clone_presets.json  emotions.txt  paralinguistic.txt  styles.txt
step_audio_impl/: README.md  __init__.py  model_loader.py  requirements.txt  step_audio_utils.py  tokenizer.py  tts.py  tts_infer.py
step_audio_impl/funasr_detach/: register.py
step_audio_impl/funasr_detach/frontends/: default.py
step_audio_impl/funasr_detach/frontends/utils/: complex_utils.py  stft.py
step_audio_impl/funasr_detach/models/bicif_paraformer/: cif_predictor.py
step_audio_impl/funasr_detach/models/paraformer/: cif_predictor.py
step_audio_impl/stepvocoder/cosyvoice2/cli/: frontend.py
